# restbook

./: .gitignore  README.md  pyproject.toml  pytest.ini
.cursor/rules/: restbook-general.mdc
.github/workflows/: publish.yml
assets/: demo.cast
docs/: _config.yml  ci-cd.md  examples.md  features.md  getting-started.md  index.md  metrics.md  playbook-structure.md
examples/: example-demo.yml  example-incremental-playbook.yml  example-metrics-playbook.yml  example-playbook.yml  example-shutdown-timeout.yml  long-running-playbook.yml  port-test-playbook.yml  simple-playbook.yml
prometheus/: docker-compose.yml
prometheus/prometheus/: prometheus.yaml
src/: main.py
src/models/playbook/: playbook.py  validator.py
src/models/session/: session_store.py
src/modules/logging/: __init__.py  base.py  colorful.py  json.py  plain.py
src/modules/metrics/: base.py  factory.py
src/modules/playbook/: commands.py  config.py  playbook.py  request_executor.py  template.py  validator.py  variables.py
src/modules/playbook/checkpoint/: __init__.py  base.py  factory.py  file.py  remote.py
src/modules/playbook/command/: run.py
src/modules/playbook/context/: execution_context.py
src/modules/playbook/managers/: checkpoint_manager.py  config_renderer.py  execution_tracker.py  observer_manager.py  session_manager.py
src/modules/playbook/metrics/: __init__.py  base.py  console.py  factory.py  json.py  metrics_manager.py  prometheus.py
src/modules/playbook/observer/: __init__.py  base.py  events.py  metrics_observer.py
src/modules/request/: aio_client_cache.py  circuit_breaker.py  client_factory.py  commands.py  errors.py  executor.py  resilient_http_client.py
src/modules/request/command/: __init__.py  request.py
src/modules/session/: auth.py  commands.py  session.py  session_provider.py  session_store.py
src/modules/shutdown/: __init__.py  coordinator.py  factory.py
src/modules/swagger/: __init__.py  parser.py  schema.py
src/utils/: logging.py
tests/integration/: test_metrics.py
tests/unit/: conftest.py  test_playbook.py  test_playbook_config.py  test_playbook_validator.py  test_session.py  test_session_store.py
tests/utils/: test_logger.py
(+30 files in other folders)
